<resources>
    <string name="app_name">Mathgo Edu</string>
    <string name="maingame_title">Maingame</string>
    <string name="imange_soal_contdesc">Imagesoal</string>
    <string name="tested_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="tested_text_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="mathgo_title">MathGo Edu</string>
    <string name="intro_dashboard">Hai</string>
    <string name="foto_contdesc">foto content description</string>
    <string name="desc_card_introduction">Selamat Datang di MathGo Edu!</string>
    <string name="instruction_info_data">Untuk liat data kamu, pencet ini !</string>
    <string name="persented_data_instruction">Persentase Permainan</string>
    <string name="score_high_title">Skor Tertinggi :</string>
    <string name="score_lower_title">Skor Terendah:</string>
    <string name="interval_title">Interval Bermain:</string>
    <string name="data_present_title">Tekan kartu ini untuk selanjutnya!</string>
    <string name="option_title">Pilihan</string>
    <string name="icon_contdesc">icon description</string>
    <string name="bacaan_title">Bacaan</string>
    <string name="youtube_video_title">Video Youtube kami</string>
    <string name="start_logo_title">Hai,Selamat Datang generasi komputasi!</string>
    <string name="instruction_input_data">Sebelum bermain, ayo isi data kamu disini!</string>
    <string name="textfield_name_hint">Nama</string>
    <string name="textfield_school_name_hint">Nama Sekolah</string>
    <string name="textfield_addprofile_hint">Tambah Profile</string>
    <string name="button_next_hint">Berikutnya</string>
    <string name="setting_title">Pengaturan</string>
    <string name="change_username_title">Ganti Username dan Nama sekolah</string>
    <string name="instruction_namechanger">Untuk menganti username dan nama sekolah,Silahkan isi dibawah ini!</string>
    <string name="username_changer_title">Isi Username Baru disini</string>
    <string name="namasekolah_change_title">Isi Nama sekolah baru disini</string>
    <string name="username_changer_hint">Ganti Nama</string>
    <string name="bugreport_title">Bug Report</string>
    <string name="bugreport_description">Jika Anda menemukan masalah atau Bug, silahkan tekan tombol dibawah ini.</string>
    <string name="button_reportbug_hint">Laporkan Masalah</string>
    <string name="version_title">Versi</string>
    <string name="version">MathGo 1.0 Release 2</string>
    <string name="score_title">Skor</string>
    <string name="average_title">Rata rata skor</string>
    <string name="default_value">0</string>
    <string name="previous_score_title">Skor sebelumnya :</string>
    <string name="button_back_title">Kembali</string>
    <string name="button_pembahasan_title">Pembahasan</string>
    <string name="from_logo_title">From</string>
    <string name="developer_teamproject_title">Mathgo Team Project</string>
    <string name="nameuser_title_tested">Tester</string>
    <string name="schoolname_title_tested">Tester 1</string>
    <string name="Interval_timer">Timer:</string>
    <string name="soal">soal:</string>
    <string name="submit">Cek jawaban</string>
    <string name="result">Jawaban</string>
    <string name="next">Selanjutnya</string>
    <string name="jawaban_tepat">Jawaban yang tepat :</string>
    <string name="test_jawaban">A. Hijau</string>
    <string name="nama_sekolah">SMA Negeri tester</string>
    <string name="title_activity_minigameactivity">minigameactivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>