<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registeractivity">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/mathgo_logo"
        android:transitionName="Logo_image"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/Title_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/start_logo_title"
        android:transitionName="From_title"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/instruction_input_data"
        android:textSize="12sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-smallcaps"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/Username"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/textfield_name_hint"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/Input_name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="10dp"
               android:inputType="textPersonName"/>

       </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namasekolahuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textfield_school_name_hint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usersekolah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/Button_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/button_next_hint"
            android:textColor="@android:color/background_light" />

    </RelativeLayout>
</LinearLayout>