<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Settingactivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/backbutton"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_arrow"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>

            <TextView
                android:id="@+id/Settings_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/setting_title"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/name_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Settings_Text"
                android:layout_marginTop="20dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/Title_namechange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/change_username_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/background_dark"/>

                    <TextView
                        android:id="@+id/notice_namechange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Title_namechange"
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/instruction_namechanger"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/Edittext_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/notice_namechange"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:autofillHints="@android:string/no"
                        android:background="@drawable/edittext_shape"
                        android:hint="@string/username_changer_title"
                        android:inputType="textPersonName"
                        android:padding="8dp"
                        tools:ignore="TouchTargetSizeCheck"/>

                    <Button
                        android:id="@+id/button_namechange"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/notice_namechange"
                        android:layout_marginStart="190dp"
                        android:layout_marginTop="60dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/buttonshape_1"
                        android:hint="@string/username_changer_hint"
                        android:textColorHint="@android:color/background_light"
                        app:backgroundTint="@android:color/background_dark"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/bug_cardreport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_change"
                android:layout_marginTop="20dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/Title_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/bugreport_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/background_dark"/>

                    <TextView
                        android:id="@+id/notice_report"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/Title_report"
                        android:layout_marginStart="10dp"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/bugreport_description"
                        android:textSize="15sp"
                        android:textStyle="normal"
                        android:textColor="@android:color/black"/>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/notice_report"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/buttonshape_1"
                        android:hint="@string/button_reportbug_hint"
                        android:onClick="ReportButton"
                        android:textColorHint="@android:color/background_light"
                        app:backgroundTint="@android:color/background_dark"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/bug_cardreport"
                android:layout_marginTop="20dp"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <TextView
                        android:id="@+id/version_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/version_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/background_dark"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/version_title"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/version"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>