<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@android:color/background_dark"
    tools:context=".SkoreActivity">

    <TextView
        android:id="@+id/title_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:text="@string/score_title"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_below="@+id/title_Text"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/average_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/average_title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="normal"/>

            <TextView
                android:id="@+id/skorakhir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/average_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="@string/default_value"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="120sp"
                android:textStyle="bold"
                android:typeface="normal"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/prevscore"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/skorakhir"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@android:color/background_light"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="5dp"
                        android:text="@string/previous_score_title"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:typeface="sans"/>

                    <TextView
                        android:id="@+id/skorsebelumnya"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="145dp"
                        android:padding="5dp"
                        android:text="@string/default_value"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:typeface="sans"/>

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/backdashboardmenu"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/prevscore"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/buttonshape_1"
                android:text="@string/button_back_title"
                android:textColor="@android:color/background_light"
                app:backgroundTint="@android:color/background_dark"/>


        </RelativeLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</RelativeLayout>