<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@android:color/background_light"
    tools:context=".Maingameactivity">

    <TextView
        android:id="@+id/title_maingame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/maingame_title"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:fontFamily="sans-serif-black"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/timer_indicator"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_below="@id/title_maingame"
        android:layout_alignParentStart="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/timer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:gravity="start"
                android:text="@string/Interval_timer"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Chronometer
                android:id="@+id/timer_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/timer_title"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/soal_count_indicator"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_below="@id/title_maingame"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp">

            <TextView
                android:id="@+id/soal_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/soal"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/soal_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/default_value"
                android:textColor="@android:color/background_dark"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="@+id/soal_title"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/soal_fragment"
        android:name="com.mathgoproject.mathgoedu.Soal_maingame_fragment"
        android:layout_below="@id/soal_count_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/jawaban_fragment"
        android:name="com.mathgoproject.mathgoedu.Jawaban_maingame_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/soal_fragment"
        tools:layout="@layout/fragment_jawaban_maingame_fragment" />

</RelativeLayout>

